docs/pages/versions/v53.0.0/sdk/imagepicker.mdx
---
title: ImagePicker
description: 一个库，提供访问系统 UI 的能力，用于从手机图库中选择图片和视频，或使用相机拍照。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-53/packages/expo-image-picker'
packageName: 'expo-image-picker'
iconUrl: '/static/images/packages/expo-image-picker.png'
platforms: ['android', 'ios', 'web', 'expo-go']
searchRank: 8
---

import { GithubIcon } from '@expo/styleguide-icons/custom/GithubIcon';

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { AndroidPermissions, IOSPermissions } from '~/components/plugins/permissions';
import { BoxLink } from '~/ui/components/BoxLink';
import {
  ConfigReactNative,
  ConfigPluginExample,
  ConfigPluginProperties,
} from '~/ui/components/ConfigSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';
import { SnackInline } from '~/ui/components/Snippet';
import { PlatformTags } from '~/ui/components/Tag/PlatformTags';

`expo-image-picker` 提供了访问系统 UI 的能力，可从手机相册中选择图片和视频，或使用相机拍照。

<ContentSpotlight file="sdk/imagepicker.mp4" loop={false} />

## 安装

<APIInstallSection />

#### 已知问题&ensp;<PlatformTags platforms={['ios']} />

在 iOS 上，当从相册中选择一张图片（通常是[更高分辨率](http://www.openradar.me/49866214)的图片）时，在某些情况下，裁剪后图片的结果会给出错误的裁剪矩形值。不幸的是，这个问题出在底层的 `UIImagePickerController`，原因是 iOS 内置的闭源工具中存在一个 bug。

## 在应用配置中进行配置

如果你在项目中使用配置插件（[Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)），可以使用 `expo-image-picker` 自带的[配置插件](/config-plugins/introduction/)进行配置。该插件允许你配置各种无法在运行时设置的属性，这些属性需要构建新的应用二进制文件后才会生效。如果你的应用**不**使用 CNG，那么你需要手动配置该库。

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-image-picker",
        {
          "photosPermission": "应用访问你的照片，以便让你与朋友分享。"
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'photosPermission',
      platform: 'ios',
      description: '用于设置 `NSPhotoLibraryUsageDescription` 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的照片"',
    },
    {
      name: 'cameraPermission',
      platform: 'ios',
      description: '用于设置 `NSCameraUsageDescription` 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的相机"',
    },
    {
      name: 'microphonePermission',
      platform: 'ios',
      description: '用于设置 `NSMicrophoneUsageDescription` 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的麦克风"',
    },
  ]}
/>

<ConfigReactNative>

如果你没有使用 Continuous Native Generation（[CNG](/workflow/continuous-native-generation/)），或者你是手动使用原生 **ios** 项目，那么你需要在 **ios/[app]/Info.plist** 中添加 `NSPhotoLibraryUsageDescription`、`NSCameraUsageDescription` 和 `NSMicrophoneUsageDescription` 键：

```xml Info.plist
<key>NSPhotoLibraryUsageDescription</key>
<string>授予 $(PRODUCT_NAME) 保存照片的权限</string>
<key>NSCameraUsageDescription</key>
<string>授予 $(PRODUCT_NAME) 访问相机的权限</string>
<key>NSMicrophoneUsageDescription</key>
<string>授予 $(PRODUCT_NAME) 使用麦克风的权限</string>
```

</ConfigReactNative>

## 用法

<SnackInline label='Image Picker' dependencies={['expo-image-picker']}>

```tsx
import { useState } from 'react';
import { Button, Image, View, StyleSheet } from 'react-native';
import * as ImagePicker from 'expo-image-picker';

export default function ImagePickerExample() {
  const [image, setImage] = useState<string | null>(null);

  const pickImage = async () => {
    // 启动图片库不需要请求权限
    let result = await ImagePicker.launchImageLibraryAsync({
      mediaTypes: ['images', 'videos'],
      allowsEditing: true,
      aspect: [4, 3],
      quality: 1,
    });

    console.log(result);

    if (!result.canceled) {
      setImage(result.assets[0].uri);
    }
  };

  return (
    <View style={styles.container}>
      <Button title="从相册中选择一张图片" onPress={pickImage} />
      {image && <Image source={{ uri: image }} style={styles.image} />}
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    alignItems: 'center',
    justifyContent: 'center',
  },
  image: {
    width: 200,
    height: 200,
  },
});
```

</SnackInline>

当你运行这个示例并选择一张图片时，你会看到你所选的图片显示在应用中，同时控制台中也会显示类似的日志：

```json collapseHeight=425
{
  "assets": [
    {
      "assetId": "C166F9F5-B5FE-4501-9531",
      "base64": null,
      "duration": null,
      "exif": null,
      "fileName": "IMG.HEIC",
      "fileSize": 6018901,
      "height": 3025,
      "type": "image",
      "uri": "file:///data/user/0/host.exp.exponent/cache/cropped1814158652.jpg"
      "width": 3024
    }
  ],
  "canceled": false
}
```

### 使用 AWS S3

<BoxLink
  title="AWS storage example"
  description="AWS 存储示例可在 with-aws-storage-upload 中找到。"
  Icon={GithubIcon}
  href="https://github.com/expo/examples/tree/master/with-aws-storage-upload"
/>

请参阅 [Amplify documentation](https://docs.amplify.aws/) 指南，以正确设置你的项目。

### 使用 Firebase

<BoxLink
  title="Firebase storage example"
  description="Firebase 存储示例可在 with-firebase-storage-upload 中找到。"
  Icon={GithubIcon}
  href="https://github.com/expo/examples/tree/master/with-firebase-storage-upload"
/>

请参阅 [Using Firebase](/guides/using-firebase/) 指南，以正确设置你的项目。

## API

```js
import * as ImagePicker from 'expo-image-picker';
```

<APISection packageName="expo-image-picker" apiName="ImagePicker" />

## 权限

### Android

以下权限会通过该库的 **AndroidManifest.xml** 自动添加。

<AndroidPermissions permissions={['CAMERA', 'READ_EXTERNAL_STORAGE', 'WRITE_EXTERNAL_STORAGE']} />

### iOS

以下用途说明键会被此库中的 API 使用。

<IOSPermissions
  permissions={[
    'NSMicrophoneUsageDescription',
    'NSPhotoLibraryUsageDescription',
    'NSCameraUsageDescription',
  ]}
/>
