docs/pages/versions/v54.0.0/sdk/imagepicker.mdx
---
title: ImagePicker
description: 一个提供访问系统 UI 的库，用于从手机相册中选择图片和视频，或使用相机拍照。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-54/packages/expo-image-picker'
packageName: 'expo-image-picker'
iconUrl: '/static/images/packages/expo-image-picker.png'
platforms: ['android', 'ios', 'web', 'expo-go']
searchRank: 8
---

import { GithubIcon } from '@expo/styleguide-icons/custom/GithubIcon';

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { AndroidPermissions, IOSPermissions } from '~/components/plugins/permissions';
import { BoxLink } from '~/ui/components/BoxLink';
import {
  ConfigReactNative,
  ConfigPluginExample,
  ConfigPluginProperties,
} from '~/ui/components/ConfigSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';
import { SnackInline } from '~/ui/components/Snippet';
import { PlatformTags } from '~/ui/components/Tag/PlatformTags';

`expo-image-picker` 提供了访问系统 UI 的能力，可用于从手机图库中选择图像和视频，或使用相机拍照。

<ContentSpotlight file="sdk/imagepicker.mp4" loop={false} />

## 安装

<APIInstallSection />

#### 已知问题&ensp;<PlatformTags platforms={['ios']} />

在 iOS 上，当从相机胶卷中选择图片（通常是[更高分辨率](https://openradar.me/49866214)的图片）时，在某些情况下，裁剪后的图像结果会给出错误的裁剪矩形值。不幸的是，这个问题出在底层的 `UIImagePickerController`，这是由于 iOS 内置的闭源工具中的一个 bug 导致的。

## 在 app 配置中进行配置

如果你在项目中使用配置插件（[Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)），你可以使用 `expo-image-picker` 内置的 [config plugin](/config-plugins/introduction/) 进行配置。该插件允许你配置各种无法在运行时设置的属性，这些属性需要重新构建新的应用二进制文件后才会生效。如果你的应用**没有**使用 CNG，那么你需要手动配置该库。

默认情况下，`expo-image-picker` 会在 Android 上添加 `RECORD_AUDIO` 权限。你可以通过将下面配置中的 `microphonePermission` 设为 false 来移除它。

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-image-picker",
        {
          "photosPermission": "该应用访问你的照片，以便你可以与朋友分享。"
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'photosPermission',
      platform: 'ios',
      description: '用于设置 `NSPhotoLibraryUsageDescription` 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的照片"',
    },
    {
      name: 'cameraPermission',
      platform: 'android' | 'ios',
      description:
        '用于设置 `NSCameraUsageDescription` 权限消息的字符串。如果提供的值为 `false`，则 Android 上的 `CAMERA` 权限将被屏蔽。',
      default: '"允许 $(PRODUCT_NAME) 访问你的相机"',
    },
    {
      name: 'microphonePermission',
      platform: 'android' | 'ios',
      description:
        '用于设置 `NSMicrophoneUsageDescription` 权限消息的字符串。如果提供的值为 `false`，则 Android 上的 `RECORD_AUDIO` 权限将被屏蔽。',
      default: '"允许 $(PRODUCT_NAME) 访问你的麦克风"',
    },
  ]}
/>

<ConfigReactNative>

如果你没有使用 Continuous Native Generation（[CNG](/workflow/continuous-native-generation/)），或者你是在手动使用原生 **ios** 项目，那么你需要将 `NSPhotoLibraryUsageDescription`、`NSCameraUsageDescription` 和 `NSMicrophoneUsageDescription` 键添加到你的 **ios/[app]/Info.plist** 中：

```xml Info.plist
<key>NSPhotoLibraryUsageDescription</key>
<string>给予 $(PRODUCT_NAME) 保存照片的权限</string>
<key>NSCameraUsageDescription</key>
<string>给予 $(PRODUCT_NAME) 访问相机的权限</string>
<key>NSMicrophoneUsageDescription</key>
<string>给予 $(PRODUCT_NAME) 使用麦克风的权限</string>
```

</ConfigReactNative>

## 用法

<SnackInline label='Image Picker' dependencies={['expo-image-picker']}>

```tsx
import { useState } from 'react';
import { Alert, Button, Image, View, StyleSheet } from 'react-native';
import * as ImagePicker from 'expo-image-picker';

export default function ImagePickerExample() {
  const [image, setImage] = useState<string | null>(null);

  const pickImage = async () => {
    // Launching the image library requires no permissions.
    // On iOS, when `allowsEditing` is set to `false`
    // and `videoExportPreset` is `'Passthrough'` (the default), you need to request video permissions manually, preferably before opening the picker,
    // so that the system prompt doesn't interrupt users after they select a video.
    // For more details, see the "Requesting video permissions" subsection.
    const permissionResult = await ImagePicker.requestMediaLibraryPermissionsAsync();

    if (!permissionResult.granted) {
      Alert.alert('Permission required', 'Permission to access the media library is required.');
      return;
    }

    let result = await ImagePicker.launchImageLibraryAsync({
      mediaTypes: ['images', 'videos'],
      allowsEditing: true,
      aspect: [4, 3],
      quality: 1,
    });

    console.log(result);

    if (!result.canceled) {
      setImage(result.assets[0].uri);
    }
  };

  return (
    <View style={styles.container}>
      <Button title="Pick an image from camera roll" onPress={pickImage} />
      {image && <Image source={{ uri: image }} style={styles.image} />}
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    alignItems: 'center',
    justifyContent: 'center',
  },
  image: {
    width: 200,
    height: 200,
  },
});
```

</SnackInline>

When you run this example and choose an image, you will see the selected image displayed in the app, and logs similar to the following will be shown in the console:

```json collapseHeight=425
{
  "assets": [
    {
      "assetId": "C166F9F5-B5FE-4501-9531",
      "base64": null,
      "duration": null,
      "exif": null,
      "fileName": "IMG.HEIC",
      "fileSize": 6018901,
      "height": 3025,
      "type": "image",
      "uri": "file:///data/user/0/host.exp.exponent/cache/cropped1814158652.jpg"
      "width": 3024
    }
  ],
  "canceled": false
}
```

### Requesting video permissions <PlatformTags platforms={['ios']} />

In SDK 54 and later, the default configuration keeps `allowsEditing` as `false` and sets [`videoExportPreset`](#videoexportpreset) to `'Passthrough'`. These settings cause the picker to skip compression and immediately return the original asset, including HEIC and AVIF files, but iOS requires media library permissions to access the original file and will display a permissions dialog right after the user selects a video.

To avoid showing a permissions dialog after selection, **manually request media library permissions** before opening the picker via [`requestMediaLibraryPermissionsAsync`](#imagepickerrequestmedialibrarypermissionsasyncwriteonly) or [`useMediaLibraryPermissions`](#usemedialibrarypermissionsoptions).

### Using AWS S3

<BoxLink
  title="AWS storage example"
  description="An example of how to use AWS storage can be found in with-aws-storage-upload."
  Icon={GithubIcon}
  href="https://github.com/expo/examples/tree/master/with-aws-storage-upload"
/>

Please refer to the [Amplify documentation](https://docs.amplify.aws/) guide to correctly set up your project.

### Using Firebase

<BoxLink
  title="Firebase storage example"
  description="An example of how to use Firebase storage can be found in with-firebase-storage-upload."
  Icon={GithubIcon}
  href="https://github.com/expo/examples/tree/master/with-firebase-storage-upload"
/>

Please refer to the [Using Firebase](/guides/using-firebase/) guide to correctly set up your project.

## API

```js
import * as ImagePicker from 'expo-image-picker';
```

<APISection packageName="expo-image-picker" apiName="ImagePicker" />

## 权限

### Android

以下权限会通过该库的 **AndroidManifest.xml** 自动添加。

<AndroidPermissions permissions={['CAMERA', 'READ_EXTERNAL_STORAGE', 'WRITE_EXTERNAL_STORAGE']} />

### iOS

以下使用说明键会被该库中的 API 使用。

<IOSPermissions
  permissions={[
    'NSMicrophoneUsageDescription',
    'NSPhotoLibraryUsageDescription',
    'NSCameraUsageDescription',
  ]}
/>
